0021 ReplicatorG
Contributions:
* justjoheinz: turn off control panel and build menu options when disconnected
* Erik: added 5D driver for RepRap's and compatible firmwares (Ultimaker)

0020 ReplicatorG
Removed:
* Took out temperature monitoring
New features:
* Pulled in skeinforge 31
* Adding new profiles for skeinforge 31
* Added support for v2.5 extruder firmware:
  * Support for motor controller swapping
  * Support for mosfet channel reassignment
Other changes:
* Improving handling for CRC failures
Contributions:
* chlunde: Edge mode on 'e' keypress re-enabled
* Miles Lightwood, Eberhard Rensch, koenkooi:
  created/backported raftless to skeinforge
* Charles Pax: new profiles, machines.xml entry for thingomatic
* justjoheinz: about box fix

0019 ReplicatorG
New features:
* Undo/Redo
* Support for unicorn toolhead (Thanks to Zeeshan M.)
* Better Mac build (thanks Zaggo)
* ABP build profile support
* MkV extruder build profile support
* Support for new 2.4 extruder features (separate HBP PID settings)
* Fixes longstanding Z-axis move breakout issue; continuous xyz motion
  limiting should work properly now
* Alpha .obj file importer
* Alpha .dae file importer


New features:
* Model can now be manipulated and saved
* Model translation
* Model scaling
* Model rotation
* Model reflection
* Autocentering
* New Windows launcher
* Save model prompt when generating a toolpath
* Tabs indicate object modification status
* Explicit python path preference
* Allow user choice of python installation
Contributions:
* Mikko Sivulainen (paeaetech): better estimation for SD uploads
* Mikko Sivulainen (paeaetech): improved serial selection handling
* GitHub user Nazdravi: basic HTTP proxy support on Linux

0017 ReplicatorG
* New features:
** STL files can now be directly loaded and previewed
** Skeinforge 0006 integrated with some simple profiles; STL files
   can now be sliced from within ReplicatorG
** Build concept now encapsulates a gcode slice and an STL model