@@ -4,9 +4,9 @@
 	<machine>
 		<name>3-Axis Simulator</name>
 		<geometry type="cartesian">
-			<axis id="x" length="300" maxfeedrate="1000" scale="11.4485"/>
-			<axis id="y" length="300" maxfeedrate="1000" scale="11.4485"/>
-			<axis id="z" length="300" maxfeedrate="100" scale="320"/>
+			<axis id="x" length="100" maxfeedrate="1000" scale="11.4485"/>
+			<axis id="y" length="100" maxfeedrate="1000" scale="11.4485"/>
+			<axis id="z" length="100" maxfeedrate="100" scale="320"/>
 		</geometry>
 		<tools>
 			<tool name="Pinch Wheel Extruder v1.1" type="extruder" material="abs" motor="true" floodcoolant="false" mistcoolant="false" fan="true" valve="false" collet="false" heater="true"/>
@@ -21,9 +21,9 @@
 		<name>Cupcake CNC</name>
 		<geometry type="cartesian">
 			<!-- different pulleys on X and Y axii -->
-			<axis id="x" length="300" maxfeedrate="5000" scale="11.767463"/> 
-			<axis id="y" length="300" maxfeedrate="5000" scale="11.767463"/>
-			<axis id="z" length="300" maxfeedrate="150" scale="320"/>
+			<axis id="x" length="100" maxfeedrate="5000" scale="11.767463"/> 
+			<axis id="y" length="100" maxfeedrate="5000" scale="11.767463"/>
+			<axis id="z" length="100" maxfeedrate="150" scale="320"/>
 		</geometry>
 		<tools>
 			<tool name="Pinch Wheel Extruder v1.1" type="extruder" material="abs" motor="true" floodcoolant="false" mistcoolant="false" fan="true" valve="false" collet="false" heater="true"/>
@@ -50,9 +50,9 @@ M18
 		<name>Cupcake CNC w/ heated build platform</name>
 		<geometry type="cartesian">
 			<!-- different pulleys on X and Y axii -->
-			<axis id="x" length="300" maxfeedrate="5000" scale="11.767463"/> 
-			<axis id="y" length="300" maxfeedrate="5000" scale="11.767463"/>
-			<axis id="z" length="300" maxfeedrate="150" scale="320"/>
+			<axis id="x" length="100" maxfeedrate="5000" scale="11.767463"/> 
+			<axis id="y" length="100" maxfeedrate="5000" scale="11.767463"/>
+			<axis id="z" length="96" maxfeedrate="150" scale="320"/>
 		</geometry>
 		<tools>
 			<tool name="Pinch Wheel Extruder v1.1a" type="extruder" material="abs" motor="true" floodcoolant="false" mistcoolant="false" fan="true" valve="false" heatedplatform="true" collet="false" heater="true"/>
@@ -79,9 +79,9 @@ M18
 		<!-- This configuration is for cupcakes outfitted with a frostruder. -->
 		<geometry type="cartesian">
 			<!-- different pulleys on X and Y axii -->
-			<axis id="x" length="300" maxfeedrate="5000" scale="11.767463"/> 
-			<axis id="y" length="300" maxfeedrate="5000" scale="11.767463"/>
-			<axis id="z" length="300" maxfeedrate="150" scale="320"/>
+			<axis id="x" length="100" maxfeedrate="5000" scale="11.767463"/> 
+			<axis id="y" length="100" maxfeedrate="5000" scale="11.767463"/>
+			<axis id="z" length="100" maxfeedrate="150" scale="320"/>
 		</geometry>
 		<tools>
 			<tool name="Frostruder v1.0" type="extruder" material="abs" motor="false" floodcoolant="false" mistcoolant="false" fan="true" valve="true" collet="false" heater="false">
@@ -111,9 +111,9 @@ M18
 		<name>EXPERIMENTAL - Cupcake CNC (with SMD v2.4)</name>
 		<geometry type="cartesian">
 			<!-- different pulleys on X and Y axii -->
-			<axis id="x" length="300" maxfeedrate="5000" scale="47.069852"/>  <!-- eighth-step driver -->
-			<axis id="y" length="300" maxfeedrate="5000" scale="47.0698523"/>  <!-- eighth-step driver -->
-			<axis id="z" length="300" maxfeedrate="150" scale="160"/> <!-- full-step driver -->
+			<axis id="x" length="100" maxfeedrate="5000" scale="47.069852"/>  <!-- eighth-step driver -->
+			<axis id="y" length="100" maxfeedrate="5000" scale="47.0698523"/>  <!-- eighth-step driver -->
+			<axis id="z" length="100" maxfeedrate="150" scale="160"/> <!-- full-step driver -->
 		</geometry>
 		<tools>
 			<tool name="Pinch Wheel Extruder v1.1" type="extruder" material="abs" motor="true" floodcoolant="false" mistcoolant="false" fan="true" valve="false" collet="false" heater="true"/>
@@ -139,9 +139,9 @@ M18
 		<name>EXPERIMENTAL - Cupcake CNC (Driver 3.0 and Acme threads)</name>
 		<geometry type="cartesian">
 			<!-- different pulleys on X and Y axii -->
-			<axis id="x" length="300" maxfeedrate="5000" scale="47.069852"/>  <!-- eighth-step driver -->
-			<axis id="y" length="300" maxfeedrate="5000" scale="47.0698523"/>  <!-- eighth-step driver -->
-			<axis id="z" length="300" maxfeedrate="200" scale="1308"/> <!-- eighth-step driver -->
+			<axis id="x" length="100" maxfeedrate="5000" scale="47.069852"/>  <!-- eighth-step driver -->
+			<axis id="y" length="100" maxfeedrate="5000" scale="47.0698523"/>  <!-- eighth-step driver -->
+			<axis id="z" length="100" maxfeedrate="200" scale="1308"/> <!-- eighth-step driver -->
 		</geometry>
 		<tools>
 			<tool name="Pinch Wheel Extruder v1.1" type="extruder" material="abs" motor="true" floodcoolant="false" mistcoolant="false" fan="true" valve="false" collet="false" heater="true"/>
@@ -167,9 +167,9 @@ M18
 		<name>EXPERIMENTAL - Thingomatic - Gen 4</name>
 		<geometry type="cartesian">
 			<!-- different pulleys on X and Y axii -->
-			<axis id="x" length="300" maxfeedrate="4000" scale="47.069852"/>  <!-- Pulley dia: 10.82mm / 1/8 step = 1/(10.82 * pi / 1600) -->
-			<axis id="y" length="300" maxfeedrate="4000" scale="47.069852"/>  <!-- Pulley dia: 10.82mm / 1/8 step = 1/(10.82 * pi / 1600) -->
-			<axis id="z" length="300" maxfeedrate="1000" scale="200"/> <!-- TR-8x8 Z axis = 1/(8/1600) -->
+			<axis id="x" length="96" maxfeedrate="4000" scale="47.069852"/>  <!-- Pulley dia: 10.82mm / 1/8 step = 1/(10.82 * pi / 1600) -->
+			<axis id="y" length="108" maxfeedrate="4000" scale="47.069852"/>  <!-- Pulley dia: 10.82mm / 1/8 step = 1/(10.82 * pi / 1600) -->
+			<axis id="z" length="100" maxfeedrate="1000" scale="200"/> <!-- TR-8x8 Z axis = 1/(8/1600) -->
 		</geometry>
 		<tools>
 			<tool name="Plastruder MK5" type="extruder" material="abs" motor="true" floodcoolant="false" mistcoolant="false" fan="true" valve="false" heatedplatform="true" collet="false" heater="true"/>
@@ -195,9 +195,9 @@ M18
 		<name>EXPERIMENTAL - Thingomatic - Candy</name>
 		<geometry type="cartesian">
 			<!-- different pulleys on X and Y axii -->
-			<axis id="x" length="300" maxfeedrate="4000" scale="13.2629119"/>  <!-- Pulley dia: 9.60mm / 1/8 step = 1/(9.60 * pi / 400) -->
-			<axis id="y" length="300" maxfeedrate="4000" scale="13.2629119"/>  <!-- Pulley dia: 9.60mm / 1/8 step = 1/(9.60 * pi / 400) -->
-			<axis id="z" length="300" maxfeedrate="1000" scale="50"/> <!-- TR-8x8 Z axis = 1/(8/400) -->
+			<axis id="x" length="96" maxfeedrate="4000" scale="13.2629119"/>  <!-- Pulley dia: 9.60mm / 1/8 step = 1/(9.60 * pi / 400) -->
+			<axis id="y" length="108" maxfeedrate="4000" scale="13.2629119"/>  <!-- Pulley dia: 9.60mm / 1/8 step = 1/(9.60 * pi / 400) -->
+			<axis id="z" length="100" maxfeedrate="1000" scale="50"/> <!-- TR-8x8 Z axis = 1/(8/400) -->
 		</geometry>
 		<tools>
 			<tool name="Plastruder MK5" type="extruder" material="abs" motor="true" floodcoolant="false" mistcoolant="false" fan="true" valve="false" heatedplatform="true" collet="false" heater="true"/>
@@ -223,9 +223,9 @@ M18
 		<name>EXPERIMENTAL - Thingomatic Halfstep</name>
 		<geometry type="cartesian">
 			<!-- different pulleys on X and Y axii -->
-			<axis id="x" length="300" maxfeedrate="4000" scale="11.767463"/>  <!-- Pulley dia: 10.82mm / 1/4 step = 1/(10.82 * pi / 400) -->
-			<axis id="y" length="300" maxfeedrate="4000" scale="11.767463"/>  <!-- Pulley dia: 10.82mm / 1/4 step = 1/(10.82 * pi / 400) -->
-			<axis id="z" length="300" maxfeedrate="1000" scale="50"/> <!-- TR-8x8 Z axis = 1/(8/400) -->
+			<axis id="x" length="96" maxfeedrate="4000" scale="11.767463"/>  <!-- Pulley dia: 10.82mm / 1/4 step = 1/(10.82 * pi / 400) -->
+			<axis id="y" length="108" maxfeedrate="4000" scale="11.767463"/>  <!-- Pulley dia: 10.82mm / 1/4 step = 1/(10.82 * pi / 400) -->
+			<axis id="z" length="100" maxfeedrate="1000" scale="50"/> <!-- TR-8x8 Z axis = 1/(8/400) -->
 		</geometry>
 		<tools>
 			<tool name="Plastruder MK5" type="extruder" material="abs" motor="true" floodcoolant="false" mistcoolant="false" fan="true" valve="false" heatedplatform="true" collet="false" heater="true"/>
@@ -251,9 +251,9 @@ M18
                 <name>Mendel with (5D firmware at 57600 baud)</name>
                 <geometry type="cartesian">
                         <!-- different pulleys on X and Y axii -->
-                        <axis id="x" length="300" maxfeedrate="5000" scale="47.069852"/>  <!-- 16th-step driver -->
-                        <axis id="y" length="300" maxfeedrate="5000" scale="47.0698523"/>  <!-- 16th-step driver -->
-                        <axis id="z" length="300" maxfeedrate="150" scale="160"/> <!-- quarter-step driver -->
+                        <axis id="x" length="200" maxfeedrate="5000" scale="47.069852"/>  <!-- 16th-step driver -->
+                        <axis id="y" length="200" maxfeedrate="5000" scale="47.0698523"/>  <!-- 16th-step driver -->
+                        <axis id="z" length="140" maxfeedrate="150" scale="160"/> <!-- quarter-step driver -->
                 </geometry>
                 <tools>
                         <tool name="Stepper-based extruder" type="extruder" material="abs" motor="true" floodcoolant="false" mistcoolant="false" fan="true" valve="false" collet="false" heater="true" motor_steps="200" heatedplatform="true" />
@@ -279,9 +279,9 @@ M108 S0
                 <name>Ultimaker v1.0 (5D firmware)</name>
                 <geometry type="cartesian">
                         <!-- different pulleys on X and Y axii -->
-                        <axis id="x" length="300" maxfeedrate="5000" scale="47.069852"/>  <!-- 16th-step driver -->
-                        <axis id="y" length="300" maxfeedrate="5000" scale="47.0698523"/>  <!-- 16th-step driver -->
-                        <axis id="z" length="300" maxfeedrate="150" scale="160"/> <!-- quarter-step driver -->
+                        <axis id="x" length="210" maxfeedrate="5000" scale="47.069852"/>  <!-- 16th-step driver -->
+                        <axis id="y" length="210" maxfeedrate="5000" scale="47.0698523"/>  <!-- 16th-step driver -->
+                        <axis id="z" length="210" maxfeedrate="150" scale="160"/> <!-- quarter-step driver -->
                 </geometry>
                 <tools>
                         <tool name="Stepper-based pinch extruder" type="extruder" material="abs" motor="true" floodcoolant="false" mistcoolant="false" fan="true" valve="false" collet="false" heater="true" heatedplatform="true" motor_steps="200" />
